<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">No Cloud Share</string>

    <string name="title_activity_about">About %s</string>
    <string name="title_activity_settings" translatable="false">@string/action_settings</string>

    <string name="action_open">Open</string>
    <string name="action_share">Share</string>
    <string name="action_add_item">Add item</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_extend">Extend</string>
    <string name="action_expire">Expire</string>
    <string name="action_remove">Remove</string>
    <string name="action_remove_expired">Remove expired shares</string>
    <string name="action_mode_selected">%d selected</string>

    <string name="active_shares">Currently sharing: %d</string>
    <string name="active_share">Currently sharing: %s</string>
    <string name="creation_ts">cr: %s</string>
    <string name="expiration_ts">ex: %s</string>
    <string name="creation_long_ts">created: %s</string>
    <string name="expiration_long_ts">expires: %s</string>
    <string name="expired">Expired</string>
    <string name="expired_num">%d items expired</string>
    <string name="removed">Removed</string>
    <string name="removed_num">%d items removed</string>
    <string name="extended">Extended</string>
    <string name="extended_num">%d items extended</string>
    <string name="copied_to_clipboard">URL copied to clipboard</string>
    <string name="empty_list">No active shares</string>
    <string name="empty_list_text">Use the \"plus\" button or the share feature in your favorite app to share things here.</string>
    <string name="thumbnail_description">Preview of shared image</string>

    <string name="intro">Intro</string>
    <string name="intro_finish">Finish</string>
    <string name="intro_next">Next</string>
    <string name="intro_prev">Previous</string>

    <string name="settings_show_index">Show index</string>
    <string name="settings_show_index_on">Show a list of shared files to http://your.ip/</string>
    <string name="settings_show_index_off">Shared files are accessible by direct link only</string>
    <string name="settings_expiration">Expiration time</string>
    <string name="settings_expiration_summary">Time after a shared link expires in minutes</string>
    <string name="settings_port">Port</string>
    <string name="settings_port_summary">Port used for running the http server</string>

    <string name="error_no_wifi">Please make sure, you are connected to WiFi</string>
    <string name="error_fetch_ip">Error resolving IP address</string>
    <string name="error_httpd">Error starting http server</string>
    <string name="error_unknown">Unknown error</string>

    <string name="html_pretext">The following list of files is available for download.</string>
    <string name="html_help">Long-click/right-click a link to download the file.</string>

</resources>
