<menu
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="de.ub0r.android.nocloudshare.ShareActivity">

    <item
            android:id="@+id/action_extend"
            android:title="@string/action_extend"
            android:orderInCategory="10"
            android:icon="@drawable/ic_action_action_history"
            app:showAsAction="ifRoom"/>

    <item
            android:id="@+id/action_expire"
            android:title="@string/action_expire"
            android:orderInCategory="20"
            android:icon="@drawable/ic_action_action_highlight_remove"
            app:showAsAction="ifRoom"/>

    <item
            android:id="@+id/action_remove"
            android:title="@string/action_remove"
            android:orderInCategory="30"
            android:icon="@drawable/ic_action_action_delete"
            app:showAsAction="ifRoom"/>

    <item
            android:id="@+id/action_share"
            android:title="@string/action_share"
            android:orderInCategory="50"
            android:icon="@drawable/ic_action_social_share"
            app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
            app:showAsAction="ifRoom"/>

    <item
            android:id="@+id/action_open"
            android:title="@string/action_open"
            android:orderInCategory="60"
            android:icon="@drawable/ic_action_action_visibility"
            app:showAsAction="never"/>

</menu>
