<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/action_extend"
            android:title="@string/action_extend"
            android:orderInCategory="10"
            android:icon="@drawable/ic_action_action_history"
            app:showAsAction="ifRoom"/>

    <item
            android:id="@+id/action_expire"
            android:title="@string/action_expire"
            android:orderInCategory="20"
            android:icon="@drawable/ic_action_action_highlight_remove"
            app:showAsAction="ifRoom"/>

    <item
            android:id="@+id/action_remove"
            android:title="@string/action_remove"
            android:orderInCategory="30"
            android:icon="@drawable/ic_action_action_delete"
            app:showAsAction="ifRoom"/>

</menu>