<menu
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="de.ub0r.android.nocloudshare.ShareListActivity">

    <item
            android:id="@+id/action_remove_expired"
            android:title="@string/action_remove_expired"
            android:orderInCategory="10"
            android:icon="@drawable/ic_action_action_delete"
            app:showAsAction="ifRoom"/>

    <item
            android:id="@+id/action_settings"
            android:title="@string/action_settings"
            android:orderInCategory="100"
            android:icon="@drawable/ic_action_action_settings"
            app:showAsAction="never"/>

    <item
            android:id="@+id/action_about"
            android:title="@string/action_about"
            android:orderInCategory="200"
            android:icon="@drawable/ic_action_action_info_outline"
            app:showAsAction="never"/>

</menu>
